Bring-up for Android Studio building
Signed-off-by: Vaisakh Murali <vaisakhmurali@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         google()
     }
     dependencies {
@@ -143,6 +144,7 @@ repositories {
     maven { url "../../../prebuilts/fullsdk-darwin/extras/android/m2repository" }
     maven { url "../../../prebuilts/fullsdk-linux/extras/android/m2repository" }
     mavenCentral()
+    jcenter()
     google()
 }
 
