launcher3: Update dependencies for compilations
* Android Studio Refactors

Signed-off-by: Vaisakh Murali <vaisakhmurali@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -141,8 +141,7 @@ android {
 }
 
 repositories {
-    maven { url "../../../prebuilts/fullsdk-darwin/extras/android/m2repository" }
-    maven { url "../../../prebuilts/fullsdk-linux/extras/android/m2repository" }
+    maven { url'https://jitpack.io' }
     mavenCentral()
     jcenter()
     google()
